--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p style="color: rgb(7, 7, 10)"><b>No.Wa : <span style="color: blue;">081242440674</span></b></p>
         <p style="color: rgb(0, 0, 0)"><b>Lagu Favorit : <br/>
           <audio autoplay controls loop>
-            <source src="/html/2/bio/Here's Your Perfect - Jamie MillerFLUKIE COVER.mp3" type="audio/mp3" />
+            <source src="https://github.com/ChesterWicipto/webdesign/raw/main/bio/Here's%20Your%20Perfect%20-%20Jamie%20MillerFLUKIE%20COVER.mp3" type="audio/mp3" />
         </audio>
         
         </div>
